syntax = "proto3";

import "google/protobuf/empty.proto";

message ClientModel {
    int64 telegramId = 1;
    string telegramUsername = 2;
    string telegramFullname = 3;
}

message ClientSearchRequest {
    int64 telegramId = 1;
}

message Empty {}

service ClientService {
    rpc read(ClientSearchRequest) returns (ClientModel) {}
    rpc create(ClientModel) returns (Empty) {}
    rpc update(ClientModel) returns (Empty) {}
    rpc delete(ClientSearchRequest) returns (Empty) {}
}
